--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "program": "${file}",
             "console": "integratedTerminal",
             "justMyCode": true,
-            "args": ["-v", "/Plex/asd/qsnormal"]
+            "args": ["-v", "/Plex/asd/Gopi/randomstuff"]
         }
     ]
 }
